# Camera2App

./: .gitignore  build.gradle  gradle.properties  local.properties  settings.gradle
android-ex-camera2-portability/: build.gradle
android-ex-camera2-portability/src/main/: AndroidManifest.xml
android-ex-camera2-portability/src/main/res/values/: strings.xml
android-ex-camera2-utils/: build.gradle
android-ex-camera2-utils/src/main/: AndroidManifest.xml
android-ex-camera2-utils/src/main/res/values/: strings.xml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  NOTICE  jpegutil.cpp  jpegutil.h  jpegutilnative.cpp  native-lib.cpp  tinyplanet.cc
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-bs/: strings.xml
app/src/main/res/values-ca/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-eu/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-gl/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-hy/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-iw/: strings.xml
app/src/main/res/values-kn/: strings.xml
app/src/main/res/values-mr/: strings.xml
app/src/main/res/values-my/: strings.xml
app/src/main/res/values-ne/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/sub_cmake_lists/libjpegutil/: CMakeLists.txt
app/sub_cmake_lists/tinyplanet/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
(+34 files in other folders)
